--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Delish Restaurant">
     <meta property="og:site_name" content="Delish Restaurant">
-    <meta property="og:url" content="">
-    <meta property="og:description" content="">
+    <meta property="og:url" content="Creative meals,desserts, and beverages for every taste.">
+    <meta property="og:description" content="Creative meals,desserts, and beverages for every taste.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="./pictures/t1.png"> 
-    <title>delish | Home </title>
+    <title>Delish | Home </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body> <div class="loader-wrapper">
@@ -58,7 +58,7 @@
     <div class="main-grid">
         <div class="items-details">
             <img src="./pictures/meals.png">
-            <h3>Meals and More</h3>
+            <h3>Meals</h3>
             <p>Delight in every dish, crafted to perfection for a dining experience like no other.</p>
         </div>
         <div class="items-details">
@@ -134,7 +134,7 @@
         <input type="radio" id="meals-tab" name="menu" checked>
         <div class="radio-bar" id="radio">
             <img src="./pictures/meals.png"> 
-            <label for="meals-tab" class="menu-item">Meals and More</label>
+            <label for="meals-tab" class="menu-item">Meals</label>
         </div>
         <input type="radio" id="desserts-tab" name="menu">
         <div class="radio-bar">
