--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p>Sip into bliss with our creamy, dreamy shakes that are pure refreshment in a glass.</p>
         </div>
         <div class="items-details">
-            <img src="./pictures/Beverages.png">
+            <img src="./pictures/beverages.png">
             <h3>Beverages</h3>
             <p>Refresh and revive with our selection of drinks, creafted to quench your thirst in style</p>
         </div>
