--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
         <a href="#" class="btn-ctn">LEARN MORE</a>
         </div>
         <div class="image-gallery">
-        <img src="./pictures/pt1.jpg">
-        <img src="./pictures/pt1.jpg">
-        <img src="./pictures/pt1.jpg">
-        <img src="./pictures/pt1.jpg">
+        <img src="./pictures/pt2.jpg">
+        <img src="./pictures/pt2.jpg" class="smimg fir">
+        <img src="./pictures/pt2.jpg" class="smimg sec">
+        <img src="./pictures/pt2.jpg">
         </div>
         </section>
   </body>
