--- a/srv.html
+++ b/srv.html
@@ -22,21 +22,27 @@
         <div class="service-details">
          <div class="s1">
           <img src="./pictures/pt2.jpg" alt="image">
-          <h2>Lorem ipsum dolor</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
-             </p>
+          <div class="imgcap">
+            <h2>Lorem ipsum dolor</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
+            </p>
+          </div>
          </div>
          <div class="s1">
           <img src="./pictures/pt2.jpg" alt="image">
-          <h2>Lorem ipsum dolor</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
-             </p>
+          <div class="imgcap">
+            <h2>Lorem ipsum dolor</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
+            </p>
+          </div>
          </div>
          <div class="s1">
           <img src="./pictures/pt2.jpg" alt="image">
-          <h2>Lorem ipsum dolor</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
-             </p>
+          <div class="imgcap">
+            <h2>Lorem ipsum dolor</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
+            </p>
+          </div>
          </div>
         </div>
        </section>
