--- a/cnt.html
+++ b/cnt.html
@@ -26,9 +26,9 @@
         <fieldset>
          <input type="text" placeholder="Name" required>
          <input type="email" placeholder="Email" required>
-         <input type="text" placeholder="Comapny" >
-         <input type="text" placeholder="Phone">
-         <textarea placeholder="Message"></textarea>
+         <input type="text" placeholder="Comapny" required>
+         <input type="text" placeholder="Phone" required>
+         <textarea placeholder="Message" required></textarea>
          <input type="submit">
         </fieldset>
         </form>
