--- a/login.html
+++ b/login.html
@@ -9,10 +9,10 @@
        <img src="./pictures/logo.png">
        <nav>
         <a href="index.html">HOME</a>
-        <a href="#" class="active">ABOUT</a>
+        <a href="about.html">ABOUT</a>
         <a href="srv.html">SERVICES</a>
         <a href="cnt.html">CONTACT</a>
-        <a href="login.html" class="btn-ctn">LOGIN IN</a>
+        <a href="#" class="btn-ctn" class="active">LOGIN IN</a>
        </nav>
       </header>
   <div class="login-container">
@@ -20,9 +20,10 @@
       <h2>Login</h2>
       <form action="#">
         <input type="text" placeholder="Username" required>
-        <input type="password" placeholder="Password" required>
-        <input type="SUBMIT">
-        <p>Don't have an account? <a href="#">Sign up</a></p>
+        <input type="password" placeholder="Password" required><br>
+        <span><input id="rmbr" type="checkbox"><label for="rmbr" class="tt">Remember Me</label></span>
+        <input type="SUBMIT" value="Login">
+        <p style="color:white">Don't have an account? <a href="#" class="tt">Sign up</a></p>
       </form>
     </div>
   </div>
