--- a/srv.html
+++ b/srv.html
@@ -8,39 +8,38 @@
       <header>
        <img src="./pictures/logo.png">
        <nav>
-        <a href="index.html">HOME</a>
-        <a href="about.html">ABOUT</a>
-        <a href="#" class="active">SERVICES</a>
+        <a href="index.html" >HOME</a>
+        <a href="about.html" >ABOUT</a>
+        <a href="#" class="active" >SERVICES</a>
         <a href="cnt.html">CONTACT</a>
         <a href="login.html" class="btn-ctn">LOGIN IN</a>
        </nav>
       </header>
     <section class="services">
-      <br>
         <h1>Lorem ipsum dolor</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <div class="service-details">
-         <div class="s1">
+         <div class="s1" style="--i:1">
           <img src="./pictures/pt2.jpg" alt="image">
           <div class="imgcap">
             <h2>Lorem ipsum dolor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
             </p>
           </div>
          </div>
-         <div class="s1">
+         <div class="s1" style="--i:2">
           <img src="./pictures/pt2.jpg" alt="image">
           <div class="imgcap">
             <h2>Lorem ipsum dolor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
             </p>
           </div>
          </div>
-         <div class="s1">
+         <div class="s1" style="--i:3">
           <img src="./pictures/pt2.jpg" alt="image">
           <div class="imgcap">
             <h2>Lorem ipsum dolor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum Lorem ipsum dolor sit amet, consectetur adipiscing elit.Qui officia deserunt mollit anim id est laborum</p>
             </p>
           </div>
          </div>
