--- a/login.html
+++ b/login.html
@@ -15,17 +15,17 @@
         <a href="#" class="btn-ctn" class="active">LOGIN IN</a>
        </nav>
       </header>
-  <div class="login-container">
+  <section class="login-container">
     <div class="login-form">
       <h2>Login</h2>
       <form action="#">
-        <input type="text" placeholder="Username" required>
-        <input type="password" placeholder="Password" required><br>
+        <input type="text" placeholder="Username" required style="animation: fadeIn 1s;">
+        <input type="password" placeholder="Password" required style="animation: fadeIn 1s;"><br>
         <span><input id="rmbr" type="checkbox"><label for="rmbr" class="tt">Remember Me</label></span>
-        <input type="SUBMIT" value="Login">
-        <p style="color:white">Don't have an account? <a href="#" class="tt">Sign up</a></p>
+        <input type="SUBMIT" value="Login" style="animation: fadeIn 1s;">
+        <p>Don't have an account? <a href="#" class="tt">Sign up</a></p>
       </form>
     </div>
-  </div>
+  </section>
 </body>
 </html>
