--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        <a href="login.html" class="btn-ctn">LOGIN IN</a>
       </nav>
      </header>
-    <div class="home">
+    <section class="home">
     <div class="content">
      <div class="content-details">
          <h1>Lorem ipsum dolor sit amet</h1>
@@ -23,6 +23,6 @@
         <a href="#" class="btn-ctn">BOOK NOW</a>
        </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
