--- a/cnt.html
+++ b/cnt.html
@@ -1,5 +1,5 @@
 
-<!-- page04 -->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -24,12 +24,12 @@
         </div>
         <form action="#">
         <fieldset>
-         <input type="text" placeholder="Name" required>
-         <input type="email" placeholder="Email" required>
-         <input type="text" placeholder="Comapny" required>
-         <input type="text" placeholder="Phone" required>
-         <textarea placeholder="Message" required></textarea>
-         <input type="submit">
+         <input type="text" placeholder="Name" required style="--i:1">
+         <input type="email" placeholder="Email" required style="--i:3">
+         <input type="text" placeholder="Comapny" required style="--i:5">
+         <input type="text" placeholder="Phone" required style="--i:7">
+         <textarea placeholder="Message" required style="--i:9"></textarea>
+         <input type="submit" style="--i:11">
         </fieldset>
         </form>
        </section>
