--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <section class="home">
     <div class="content">
      <div class="content-details">
-         <h1>Lorem ipsum dolor sit amet</h1>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.sunt in culpa qui officia deserunt.</p>
-        <a href="#" class="btn-ctn">BOOK NOW</a>
+         <h1 style="--i:0">Lorem ipsum dolor sit amet</h1>
+         <p style="--i:1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.sunt in culpa qui officia deserunt.</p>
+          <a style="--i:2" href="#" class="btn-ctn">BOOK NOW</a>
        </div>
       </div>
     </section>
