--- a/login.html
+++ b/login.html
@@ -19,11 +19,11 @@
     <div class="login-form">
       <h2>Login</h2>
       <form action="#">
-        <input type="text" placeholder="Username" required style="animation: fadeIn 1s;">
-        <input type="password" placeholder="Password" required style="animation: fadeIn 1s;"><br>
-        <span><input id="rmbr" type="checkbox"><label for="rmbr" class="tt">Remember Me</label></span>
-        <input type="SUBMIT" value="Login" style="animation: fadeIn 1s;">
-        <p>Don't have an account? <a href="#" class="tt">Sign up</a></p>
+        <input type="text" placeholder="Username"  class="rot" required style="--i:5">
+        <input type="password" placeholder="Password"  class="rot" required style="--i:6"><br>
+        <span><input id="rmbr" type="checkbox"  class="rot" style="--i:7"><label class="rot tt" style="--i:7;display:inline-block;" for="rmbr">Remember Me</label></span>
+        <input type="SUBMIT" class="rot" value="Login" style="--i:8">
+        <p class="rot" style="--i:9;">Don't have an account? <a href="#" class="tt">Sign up</a></p>
       </form>
     </div>
   </section>
